infra_env_dashboard/infra-automation/modules/network/vnet.tf
resource "azurerm_virtual_network" "vnet" {
  name                = var.vnet_name
  location            = var.location
  resource_group_name = var.resource_group_name
  address_space       = [var.address_space]
  tags                = var.tags # Apply tags here
}
